# deep_scar_seq_toolkit

./: .gitignore  LICENSE  README.md  annotate_SVs.py  filter_reads.py  pyproject.toml  run_annotate_svs_array.slurm  validate_mh_ins.py
data/: mh_ins_validation_sample.tsv  read_level_sv_events.tsv
data/dss_020226/: NA01_A.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA01_A.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA01_B.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA01_B.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA01_C.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA02_A.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA02_B.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA02_B.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA02_C.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA02_D.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA02_D.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA02_E.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA02_E.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA03_A.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA03_A.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA03_B.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA03_B.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA03_C.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA04_A.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA04_B.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA04_C.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA04_C.hg19.dedup.chr2_1153052_w5.annotated.tsv  NA04_D.hg19.dedup.chr2_1152626_w5.annotated.tsv  NA04_D.hg19.dedup.chr2_1153052_w5.annotated.tsv  (+38 more)
scripts/: aggregate_svs.py  annotate_svs.py  run_annotate_svs_array.sge  run_annotate_svs_array.slurm
(+168 files in other folders)
